--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <h3>Sitio Web Aduana Francesa</h3>
                         <ul>
                             <li>Correcciones código <b>JavaScript</b></li>
-                            <li>Detección de defectos en el código mediante <b>testing</b></li>
+                            <li>Detección de defectos en el código mediante <b>Testing</b></li>
                             <li>Trabajo remoto con equipo <b>100% francés</b></li>
                             <li>Gestión mediante sistema de tickets con <b>JIRA</b></li>
                             <li>Sistema de control de versiones <b>Git</b></li>
@@ -101,17 +101,14 @@
                     </div>
                     <div class="projects_item-info">
                         <h1>Mapty App</h1>
-                        <h3>Código JavaScript</h2>
+                        <h3>Registro actividades deportivas</h2>
                         <ul>
-                            <li>Correcciones código <b>JavaScript</b></li>
-                            <li>Detección de defectos en el código mediante <b>testing</b></li>
-                            <li>Trabajo remoto con equipo <b>100% francés</b></li>
-                            <li>Gestión mediante sistema de tickets con <b>JIRA</b></li>
-                            <li>Sistema de control de versiones <b>Git</b></li>
-                            <li>Repositorio online <b>GitHub</b></li>
-                            <li>Metodología <b>Agile</b></li>
-                            <li>Entorno de desarrollo <b>IntelliJ</b></li>
-                            <li>Consulta a base de datos <b>MongoDB</b></li>
+                            <li>Creación desde cero del <b>código JavaScript</b></li>
+                            <li>Paradigma <b>Object-Oriented Programming</b></li>
+                            <li>Utilización de <b>Clases</b></li>
+                            <li>Manejo de <b>Geolocation API</b></li>
+                            <li>Mapas con biblioteca <b>Leaflet</b></li>
+                            <li>Trabajo con <b>localStorage</b></li>
                         </ul>
                     </div>
                 </div>
@@ -127,10 +124,35 @@
                 <div class="projects_item-info">
                     <h1>Bankist App</h1>
                     <h3>Aplicación banco</h2>
-                        <p>App en la que...</p>
+                        <ul>
+                            <li>Creación desde cero del <b>código JavaScript</b></li>
+                            <li>Trabajo con <b>Date & Time</b></li>
+                            <li>Implantación de <b>temporizador de inactividad</b></li>
+                            <li>Mecanismo de <b>autenticación</b></li>
+                            <li><b>Interacción</b> entre diferentes cuentas</li>
+                        </ul>
                 </div>
             </div>
             <div class="project_item">
+                <div class="projects_item-image-container">
+                    <img
+                    src="images/project-portatil-portfolio-lazy.jpg"
+                    data-src="images/project-portatil-portfolio.png"
+                    alt="portfolio"
+                    class="projects_item-image lazy-img">
+                </div>
+                <div class="projects_item-info">
+                    <h1>Este portfolio</h1>
+                    <h3>Creado desde cero</h2>
+                        <ul>
+                            <li><b>Responsive Web Design</b> con Media Queries</li>
+                            <li>Diseño <b>Mobile First</b></li>
+                            <li>Utilización de <b>CSS Grid y Flexbox</b></li>
+                            <li>Formulario realizado con <b>PHP</b></li>
+                        </ul>
+                </div>
+            </div>
+            <!-- <div class="project_item">
                 <div class="projects_item-image-container">
                     <img
                     src="images/project-portatil-pig-game-lazy.png"
@@ -141,15 +163,20 @@
                 <div class="projects_item-info">
                     <h1>Pig-Game</h1>
                     <h3>Aplicación juego</h2>
-                    <p>Juego en el que...</p>
+                        <ul>
+                            <li>Implementación de arquitectura <b>MVC: Modelo-Vista-Controlador</b></li>
+                            <li>Datos extraídos de la <b>API Forkify</b></li>
+                            <li>Peticiones asíncrona <b>AJAX</b></li>
+                            <li>Trabajo con <b>localStorage</b></li>
+                        </ul>
                 </div>
-            </div>
+            </div> -->
         </section>
         <section class="contact">
             <h1 class="projects_title">Contáctame</h1>
             <div id="main_contact">
                 <div class="main_contact_div_form">
-                    <h3>Me alegra verte por aquí!</h3>
+                    <h3>¡Me alegra verte por aquí!</h3>
                     <form method="POST" action="enviar.php" class="main_contact_form-form">
                         <label for="first-name">Nombre</label>
                         <input
@@ -192,7 +219,7 @@
                 </div>
                 <div class="main_contact_div_info">
                     <p>
-                        ¿Lo del formulario no es lo tuyo? No pasa nada. Puedes contactarme también a través de estos otros medios:
+                        O si lo prefieres, puedes contactarme también a través de estos otros medios:
                     </p>
                     <div class="main_contact_div_info-item">
                         <img src="images/icono-LinkedIn.png" alt="icono-LinkedIn">    
